fixed load image flicker

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -187,6 +187,7 @@
 .intro__main,
 .intro__sub1,
 .intro__sub2,
-.cta {
+.cta,
+.hero {
   opacity: 0;
 }
